added deprecation warning

--- a/views/index.erb
+++ b/views/index.erb
@@ -50,7 +50,14 @@
       habt welches Kürzel ihr braucht, dann geht auf euren HTWK-Kalender und
       schaut in der Adresszeile im Browser nach.
       Dort steht nach "name;" euer Kürzel.</span></p>
-
+      <div id="deprecation">
+        Ich bin seit Dezember 2011 kein Student mehr. Daher wird
+        diese Anwendung nicht mehr gepflegt. Am Besten wäre es, wenn
+        irgendjemand sich bereit erklärt, dass Ding zu übernehmen.
+        Den Quellcode findet ihr <a href="https://github.com/benben/HTWKalender">hier</a>. Schreibt mir bitte eine Mail
+        an ben ät nerdlabor punkt de wenn ihr Fragen habt bzw. sich
+        jemand finden sollte.
+      </div>
     <p><%= @p %></p>
     <form method="get" action="/choose">
       <table border="1" cellspacing="0" cellpadding="5">
