--- a/public/style.css
+++ b/public/style.css
@@ -36,3 +36,16 @@ table, td, tr {
 p.faq {
     font-weight:bold;
 }
+
+#deprecation {
+    padding: 8px 35px 8px 14px;
+    margin-bottom: 18px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    border: 1px solid #EED3D7;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    color: #B94A48;
+    background-color: #F2DEDE;
+    font-weight: bold;
+}
