--- a/views/get.erb
+++ b/views/get.erb
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>HTWK-Kalender to iCal</h1>
+
     <h2>Kalenderlink</h2>
     <p>Hier ist dein Kalenderlink. Kopiere diesen einfach in deine Anwendung, dann kannst du immer den aktuellen Kalender verwenden. Das ist die empfohlene Variante.</p>
     <p class="link"><%= @permalink %></p>
@@ -15,6 +16,13 @@
     <p>Hier ist dein Downloadlink. Lade dir hier die Kalenderdatei runter. Achtung: Wenn Änderungen am Kalender vorgenommen werden, ändert sich dein Kalender nicht automatisch, falls du diese Datei benutzt.</p>
     <p class="link"><a href="<%= @downloadlink %>">Download</a></p>
     <h2>Viel Spaß!</h2>
-    <p>Anregungen, Lob, Kritik an ben [ätt] nerdlabor [punkt] de</p>
+          <div id="deprecation">
+        Ich bin seit Dezember 2011 kein Student mehr. Daher wird
+        diese Anwendung nicht mehr gepflegt. Am Besten wäre es, wenn
+        irgendjemand sich bereit erklärt, dass Ding zu übernehmen.
+        Den Quellcode findet ihr <a href="https://github.com/benben/HTWKalender">hier</a>. Schreibt mir bitte eine Mail
+        an ben ät nerdlabor punkt de wenn ihr Fragen habt bzw. sich
+        jemand finden sollte.
+      </div>
   </body>
 </html>
